# PythonPackageCookieCutterTamplate

./: README.md  cookiecutter.json  pyproject.toml
hooks/: post_gen_project.py  pre_gen_project.py
tests/: test_basicTest.py
{{cookiecutter.packageName}}/: LICENCE  pyproject.toml
{{cookiecutter.packageName}}/tests/: test_basicTest.py
